# whisper-stream

./: README.md  pyproject.toml  start.sh
src/: audio_capture.py  whisper_stream.py
