[project]
name = "whisper-stream"
version = "0.1.0"
description = "Real-time audio transcription with auto-typing"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.0",
    "pyautogui>=0.9.54",
    "pynput>=1.7.0",
    "numpy>=1.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []